--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"damertest.aternos.me",
-	"port": 58015,
+	"ip":"ma_yed124TyFP.aternos.me",
+	"port": 45025,
 	"name": "afkbot",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
